fix the footer not covering the content

--- a/waste-management/src/index.css
+++ b/waste-management/src/index.css
@@ -1,9 +1,4 @@
-.container {
-  float: center;
-  align-items: center;
-  justify-content: space-around;
-  display: block;
-}
+
 .content {
   margin-top: 5%;
   margin-left: 10%;
@@ -22,9 +17,10 @@
   display: flex;
 }
 .footer {
-  position: absolute;
-  bottom: 0%;
+  position: fixed;
+  bottom: 0;
   width: 100%;
+  height: 4.5rem;
 }
 .list {
   width: 50%;
